fixed card text overflowing on mobile

--- a/css/mobile_about.css
+++ b/css/mobile_about.css
@@ -22,6 +22,7 @@
 }
 .question-card
 {
+	overflow: scroll;
 	animation-name: wiggle;
 	animation-duration: 2s;
 	animation-iteration-count: infinite;
